tdf#111856 Playing video in impress is considered a modification

Change-Id: If7a2db2d37dc6230a76b79c79e6163a1b33be7d2